Adicionado botão flutuante.

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,12 @@
 		</div>
 		<button class="button" id="comRota"><b>Criar Rota</b></button>
 	</div>
+	
+	<div id="searchBUtton" class="round-button">
+		<a>
+			<img src="/img/search.png" alt="Home" />
+		</a>
+	</div>
 	 
 	<script src="cordova.js"></script>	
 	<script src="js/lib/jquery/jquery.js"></script>
