--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,7 @@
 	
 	<div id="searchBUtton" class="round-button">
 		<a>
-			<img src="/img/search.png" alt="Home" />
+			<img src="img/search.png" alt="Home" />
 		</a>
 	</div>
 	 
