--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,7 @@
         <title>Busu</title>
     </head>
    <body>
- 
-	<input id="pac-input" class="controls hidden" list="browsers" type="text"  data-list-focus="true"  placeholder="Digite o nome da rota">
+ 	 
 		<datalist id="browsers">
 			 <option>Jockey X Santa Rosa</option>
 			 <option>Parque Aurora X Leao</option>
@@ -35,14 +34,14 @@
 			 <option>Sto Eduardo</option>
 			 <option>Rodoviária X Travessão</option>
 		</datalist> 
-	</input>
+	 
 	
     <div id="map"></div>
 	
 	<div id="myModal" class="modal">
 
 		<!-- Modal content -->
-		<div class="modal-content">
+		<div class="modal-content animated zoomIn">
 			<span class="close">&times;</span>
 			<p class="titulo" id="title"></p>
 	
