Adicionado termo de compromisso

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -70,6 +70,21 @@
 			<img src="img/search.png" alt="Home" />
 		</a>
 	</div>
+	
+	<div id="Otermo" class="termo">
+	<div class="termo-content">
+		<p class="titulo"> Termo de compromisso</p>
+		
+		<p>Se não aceitar não usa.</p>
+    
+		<form name="TermoForm" onsubmit="return validateForm()">
+			<input type="radio" name="opcao" value="Eu aceito"> Eu Aceito<br>
+			<input type="radio" name="opcao" value="Eu não aceito"> Eu não aceito<br>
+			<input type="submit" value="Prosseguir" /> 
+			</form>
+		</div>
+
+	</div>
 	 
 	<script src="cordova.js"></script>	
 	<script src="js/lib/jquery/jquery.js"></script>
