Removido codigo inutil do html

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,31 +11,7 @@
         <title>Busu</title>
     </head>
    <body>
- 	 
-		<datalist id="browsers">
-			 <option>Jockey X Santa Rosa</option>
-			 <option>Parque Aurora X Leao</option>
-			 <option>PPrazeres X IPS via J. Maria</option>
-			 <option>Eldorado X Codin</option>
-			 <option>Eldorado X Centro</option>
-			 <option>Nova Campos X Novo Mundo</option>
-			 <option>Fundão X Centro</option>
-			 <option>Cidade Luz</option>
-			 <option>Bonsucesso X Centro</option>
-			 <option>Ribeiro Do Amaro X Rodoviaria</option>
-			 <option>Calabouço Sta X Cecília</option>
-			 <option>Escola Agrotecnica</option>
-			 <option>Lagoa das Pedras</option>
-			 <option>Parque Prazeres X Alphaville</option>
-			 <option>Nova Campos</option>
-			 <option>Nova Campos X Novo Mundo-Custódia</option>
-			 <option>Nova Campos X Nogueira</option>
-			 <option>Parque Guarus X Nogueira</option>
-			 <option>Sto Eduardo</option>
-			 <option>Rodoviária X Travessão</option>
-		</datalist> 
-	 
-	
+ 	 	
     <div id="map"></div>
 	
 	<div id="myModal" class="modal">
@@ -75,7 +51,7 @@
 		<div class="termo-content animated zoomIn">
 			<p style="text-align: center;font-size: 20px;"><b>Termo de Uso</b></p>
 			<div class="TextoTermo">
-				<p>Eu concordo e aceito com esse termo, caso eu não aceite eu não poderei usar esse app </p>
+				<p>Eu concordo e aceito com esse termo, caso eu não aceite eu não poderei usar esse app. </p>
 			</div>
 			<form name="TermoForm" class="Formtermo" onsubmit="return validateForm()">
 					<div class="BtnCompromisso">
